--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2>Projects</h2> 
                 <p>A quick view of the Websites I have designed.</p>
         <div class="box" id="box">
-            <div class="bg1"><a href="https://joshuavaneps.github.io/hoerison/" target="_blank"><h3>First Website</h3></a></div>
+            <div class="bg1"><a href="https://joshuavaneps.github.io/hoerison-bug-repair/" target="_blank"><h3>First Website</h3></a></div>
             <div class="bg2"><h3>Second Website</h3></div>
             <div class="bg3"><h3>Third Website</h3></div>
             <div class="bg4"><h3>Mobile App 1</h3></div>
